fix: fixed jumping compact header (#89)

--- a/assets/styles/components/compactHeader.scss
+++ b/assets/styles/components/compactHeader.scss
@@ -536,7 +536,7 @@ body.compact-header--active {
 
 		&--sticky {
 
-			position: fixed;
+			position: sticky;
 			z-index: 99;
 			top: 0;
 			left: 0;
